updated css of rotation GTKscale

--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -337,6 +337,46 @@
                     <property name="position">1</property>
                   </packing>
                 </child>
+                <child>
+                  <object class="GtkButtonBox">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="layout_style">spread</property>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="label" translatable="yes">Edit Neural
+Network</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="label" translatable="yes">Settings</property>
+                        <property name="visible">True</property>
+                        <property name="can_focus">True</property>
+                        <property name="receives_default">True</property>
+                      </object>
+                      <packing>
+                        <property name="expand">True</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
+                    <property name="pack_type">end</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
                 <style>
                   <class name="left_panel"/>
                 </style>
@@ -551,6 +591,42 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                     <property name="can_focus">False</property>
                     <property name="orientation">vertical</property>
                     <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">Rotate image</property>
+                        <property name="ellipsize">start</property>
+                        <attributes>
+                          <attribute name="font-desc" value="Sans Bold 10"/>
+                          <attribute name="scale" value="2"/>
+                          <attribute name="gravity" value="east"/>
+                        </attributes>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkImage" id="selected_image2">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">center</property>
+                        <property name="valign">center</property>
+                        <property name="stock">gtk-missing-image</property>
+                        <style>
+                          <class name="sudoku_image"/>
+                        </style>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">1</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkButtonBox">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
@@ -562,7 +638,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <signal name="clicked" handler="cancel_edit_option" object="page1" swapped="no"/>
+                            <signal name="clicked" handler="cancel_edit_option" object="page2" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -576,7 +652,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <signal name="clicked" handler="on_rotation_finished" object="page1" swapped="no"/>
+                            <signal name="clicked" handler="on_rotation_finished" object="page2" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -589,41 +665,28 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                         <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="pack_type">end</property>
-                        <property name="position">0</property>
+                        <property name="position">2</property>
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkImage" id="selected_image2">
+                      <object class="GtkScale">
                         <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="halign">center</property>
-                        <property name="valign">center</property>
-                        <property name="stock">gtk-connect</property>
+                        <property name="can_focus">True</property>
+                        <property name="hexpand">False</property>
+                        <property name="vexpand">False</property>
+                        <property name="adjustment">adjustment1</property>
+                        <property name="round_digits">1</property>
+                        <property name="has_origin">False</property>
+                        <signal name="value-changed" handler="rotate_img" object="selected_image2" swapped="no"/>
                         <style>
-                          <class name="sudoku_image"/>
+                          <class name="progress"/>
                         </style>
                       </object>
                       <packing>
                         <property name="expand">False</property>
                         <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkScale" id="scale_rotation">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="hexpand">True</property>
-                        <property name="vexpand">False</property>
-                        <property name="adjustment">adjustment1</property>
-                        <property name="round_digits">1</property>
-                        <signal name="value-changed" handler="rotate_img" object="selected_image2" swapped="no"/>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
                         <property name="pack_type">end</property>
-                        <property name="position">2</property>
+                        <property name="position">3</property>
                       </packing>
                     </child>
                   </object>
@@ -638,6 +701,25 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
                     <property name="orientation">vertical</property>
+                    <child>
+                      <object class="GtkLabel">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">Resize image</property>
+                        <property name="ellipsize">start</property>
+                        <attributes>
+                          <attribute name="font-desc" value="Sans Bold 10"/>
+                          <attribute name="scale" value="2"/>
+                          <attribute name="gravity" value="east"/>
+                        </attributes>
+                      </object>
+                      <packing>
+                        <property name="expand">False</property>
+                        <property name="fill">True</property>
+                        <property name="position">0</property>
+                      </packing>
+                    </child>
                     <child>
                       <object class="GtkImage" id="selected_image3">
                         <property name="visible">True</property>
@@ -667,7 +749,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <signal name="clicked" handler="cancel_edit_option" object="page1" swapped="no"/>
+                            <signal name="clicked" handler="cancel_edit_option" object="page2" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -681,7 +763,7 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <signal name="clicked" handler="on_resize_finished" object="page1" swapped="no"/>
+                            <signal name="clicked" handler="on_resize_finished" object="page2" swapped="no"/>
                           </object>
                           <packing>
                             <property name="expand">True</property>
@@ -719,6 +801,27 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
             <property name="name">page0</property>
             <property name="title" translatable="yes">page0</property>
             <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkBox" id="neuralNetwork">
+            <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="orientation">vertical</property>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+          </object>
+          <packing>
+            <property name="name">page2</property>
+            <property name="title" translatable="yes">page2</property>
+            <property name="position">2</property>
           </packing>
         </child>
       </object>
