--- a/src/GUI/main.glade
+++ b/src/GUI/main.glade
@@ -836,11 +836,13 @@ after that you load the picture of the sudoku you have taken in photo, and TADA 
             <property name="visible">True</property>
             <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
+            <property name="spacing">12</property>
             <child>
               <object class="GtkBox">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
+                <property name="spacing">9</property>
                 <child>
                   <object class="GtkLabel">
                     <property name="visible">True</property>
